--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script defer src="assets/js/auth.js"></script>
-  <script defer src="assets/js/login.js"></script>
+  <script type="module" defer src="assets/js/auth.js"></script>
+  <script type="module" defer src="assets/js/login.js"></script>
 </head>
 <body class="bg-light">
   <div class="container mt-5">
