--- a/pages/logs.html
+++ b/pages/logs.html
@@ -14,14 +14,14 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" href="menu.html">App Web</a>
+            <a class="navbar-brand" href="./menu.html">App Web</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-sticky-note"></i> Notas</a>
+                        <a class="nav-link" href="../notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fas fa-image"></i> Imágenes</a>
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="./user_profile.html"><i class="fas fa-user"></i> Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
+                        <a class="nav-link" id="logoutNav"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
                     </li>
                 </ul>
             </div>
@@ -65,5 +65,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script type="module" src="../assets/js/logs.js"></script>
+    <script src="../assets/js/logout.js"></script>
 </body>
 </html>
