--- a/pages/menu.html
+++ b/pages/menu.html
@@ -14,14 +14,14 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" href="menu.html">App Web</a>
+            <a class="navbar-brand" href="./menu.html">App Web</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-sticky-note"></i> Notas</a>
+                        <a class="nav-link" href="../notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fas fa-image"></i> Imágenes</a>
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="./user_profile.html"><i class="fas fa-user"></i> Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
+                        <a class="nav-link" id="logoutNav"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
                     </li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
                 <div class="card-custom d-flex flex-column justify-content-between align-items-center flex-fill">
                     <h5><i class="fas fa-sticky-note"></i> Mis Notas</h5>
                     <p>Accede a todas tus notas guardadas, agrega nuevas y edita las existentes.</p>
-                    <a href="#" class="btn btn-custom mt-auto">Ir a Notas</a>
+                    <a href="../notes.html" class="btn btn-custom mt-auto">Ir a Notas</a>
                 </div>
             </div>
             <div class="col-md-4 d-flex">
@@ -71,14 +71,14 @@
                 <div class="card-custom d-flex flex-column justify-content-between align-items-center flex-fill">
                     <h5><i class="fas fa-user"></i> Mi Perfil</h5>
                     <p>Visualiza y edita la información de tu perfil personal.</p>
-                    <a href="#" class="btn btn-custom mt-auto">Ir a Perfil</a>
+                    <a href="./user_profile.html" class="btn btn-custom mt-auto">Ir a Perfil</a>
                 </div>
             </div>
             <div class="col-md-6 d-flex">
                 <div class="card-custom d-flex flex-column justify-content-between align-items-center flex-fill">
                     <h5><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</h5>
                     <p>Haz clic para cerrar sesión y salir de tu cuenta.</p>
-                    <a href="../index.html" class="btn btn-custom mt-auto">Cerrar sesión</a>
+                    <a class="btn btn-custom mt-auto" id="logoutMenu">Cerrar sesión</a>
                 </div>
             </div>
         </div>
@@ -87,37 +87,6 @@
     <!-- Scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script src="../assets/js/logout.js"></script>
 </body>
 </html>
-
-<!-- 
-async function login(email, password) {
-  const users = getUsers();
-  const hashedPassword = await hashPassword(password);
-  let usersList = JSON.parse(localStorage.getItem("users"));
-  let flag = false;
-
-  console.log(usersList[0].email === email)
-  console.log(usersList[0].password === hashedPassword);
-  
-
-  for (let index = 0; index < usersList.length; index++) {
-    if (usersList[index].email === email) {
-      if (usersList[index].password === hashedPassword) {
-          let indicator = index;
-          localStorage.setItem("index", indicator);
-          return true;
-      }
-    }
-  }
-
-  if (flag === false) {
-    return false;
-  }
-
-  // const user = users.find(u => u.email === email && u.password === hashedPassword);
-  // if (user) {
-  //   localStorage.setItem("loggedIn", JSON.stringify(user));
-  //   return user.id; // Changed from "return true, user.id;" 
-  // }
-} -->
