feat(imgs.js) Se añadio la página y el funcionamiento de imgs.js

--- a/notes.html
+++ b/notes.html
@@ -9,41 +9,29 @@
     
 </head>
 <body class="bg-light">
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm">
+    <!-- Barra de navegación -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
         <div class="container-fluid">
-            <a class="navbar-brand fw-bold" href="./pages/menu.html">
-                <i class="fas fa-sticky-note me-2"></i>CrudZocial
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <a class="navbar-brand" href="./pages/menu.html">App Web</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="./notes.html">
-                            <i class="fas fa-sticky-note"></i> Notas
-                        </a>
+                        <a class="nav-link" href="./notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="fas fa-image"></i> Imagenes
-                        </a>
+                        <a class="nav-link" href="./pages/imgs.html"><i class="fas fa-image"></i> Imágenes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/logs.html">
-                            <i class="fas fa-clipboard-list"></i> Logs
-                        </a>
+                        <a class="nav-link" href="./pages/logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/user_profile.html">
-                            <i class="fas fa-user"></i> Perfil
-                        </a>
+                        <a class="nav-link" href="./pages/user_profile.html"><i class="fas fa-user"></i> Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="logoutNav">
-                            <i class="fas fa-sign-out-alt"></i> Cerrar sesion
-                        </a>
+                        <a class="nav-link" id="logoutNav"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
                     </li>
                 </ul>
             </div>
