--- a/pages/logs.html
+++ b/pages/logs.html
@@ -7,7 +7,6 @@
     <!-- Vinculamos el CSS de Bootstrap y Font Awesome para íconos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/logs.css">
 </head>
 <body>
@@ -24,10 +23,10 @@
                         <a class="nav-link" href="../notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-image"></i> Imágenes</a>
+                        <a class="nav-link" href="./imgs.html"><i class="fas fa-image"></i> Imágenes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
+                        <a class="nav-link" href="./logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./user_profile.html"><i class="fas fa-user"></i> Perfil</a>
@@ -40,7 +39,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container py-4">
         <div class="card-custom">
             <h5><i class="fas fa-clipboard-list"></i> Mis Logs</h5>
 
