--- a/pages/menu.html
+++ b/pages/menu.html
@@ -7,7 +7,6 @@
     <!-- Vinculamos el CSS de Bootstrap y Font Awesome para íconos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/menu.css">
 </head>
 <body>
@@ -24,7 +23,7 @@
                         <a class="nav-link" href="../notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="fas fa-image"></i> Imágenes</a>
+                        <a class="nav-link" href="./imgs.html"><i class="fas fa-image"></i> Imágenes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
@@ -41,7 +40,7 @@
     </nav>
 
     <!-- Contenido principal -->
-    <div class="container text-center">
+    <div class="container text-center py-4">
         <div class="row">
             <div class="col-md-4 d-flex">
                 <div class="card-custom d-flex flex-column justify-content-between align-items-center flex-fill">
@@ -54,7 +53,7 @@
                 <div class="card-custom d-flex flex-column justify-content-between align-items-center flex-fill">
                     <h5><i class="fas fa-image"></i> Mis Imágenes</h5>
                     <p>Visualiza, agrega o elimina imágenes que hayas subido.</p>
-                    <a href="#" class="btn btn-custom mt-auto">Ir a Imágenes</a>
+                    <a href="./imgs.html" class="btn btn-custom mt-auto">Ir a Imágenes</a>
                 </div>
             </div>
             <div class="col-md-4 d-flex">
