--- a/pages/user_profile.html
+++ b/pages/user_profile.html
@@ -6,31 +6,40 @@
   <title>Modificar Perfil</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../css/style.css" />
 </head>
 <body>
 
   <!-- Barra de navegación -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="./menu.html">App Web</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../notes.html"><i class="fas fa-sticky-note"></i> Notas</a></li>
-          <li class="nav-item"><a class="nav-link" href="#"><i class="fas fa-image"></i> Imágenes</a></li>
-          <li class="nav-item"><a class="nav-link" href="./logs.html"><i class="fas fa-clipboard-list"></i> Logs</a></li>
-          <li class="nav-item"><a class="nav-link active" href="./user_profile.html"><i class="fas fa-user"></i> Perfil</a></li>
-          <li class="nav-item"><a class="nav-link" id="logoutNav"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="./menu.html">App Web</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./imgs.html"><i class="fas fa-image"></i> Imágenes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./user_profile.html"><i class="fas fa-user"></i> Perfil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="logoutNav"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
   <!-- Contenedor principal -->
-  <div class="container d-flex justify-content-center align-items-center">
+  <div class="container py-4 d-flex justify-content-center align-items-center">
     <div class="card shadow p-4 w-100" style="max-width: 800px;">
       <h4 class="mb-4 text-center"><i class="fas fa-user-cog"></i> Modificar Datos Personales</h4>
       <form id="user-form">
