feat(logs.js) Se llamó la función en diferentes archivos para su funcionamiento

--- a/register.html
+++ b/register.html
@@ -12,18 +12,18 @@
   <div class="container mt-5">
     <div class="card shadow-sm mx-auto" style="max-width: 500px;">
       <div class="card-body">
-        <h3 class="text-center mb-4">Register</h3>
+        <h3 class="text-center mb-4">Registro de usuario</h3>
         <form id="registerForm">
-          <div class="mb-3"><label class="form-label">Nombres</label><input name="nombres" class="form-control" required></div>
-          <div class="mb-3"><label class="form-label">Apellidos</label><input name="apellidos" class="form-control" required></div>
-          <div class="mb-3"><label class="form-label">Email</label><input type="email" name="email" class="form-control" required></div>
-          <div class="mb-3"><label class="form-label">Teléfono</label><input type = "number" name="telefono" class="form-control"></div>
-          <div class="mb-3"><label class="form-label">País</label><input name="pais" class="form-control"></div>
-          <div class="mb-3"><label class="form-label">Ciudad</label><input name="ciudad" class="form-control"></div>
+          <div class="mb-3"><label class="form-label">Nombres</label><input name="firstName" class="form-control" required></div>
+          <div class="mb-3"><label class="form-label">Apellidos</label><input name="lastName" class="form-control" required></div>
+          <div class="mb-3"><label class="form-label">Correo electrónico</label><input type="email" name="email" class="form-control" required></div>
+          <div class="mb-3"><label class="form-label">Teléfono</label><input type ="number" name="phone" class="form-control"></div>
+          <div class="mb-3"><label class="form-label">País</label><input name="country" class="form-control"></div>
+          <div class="mb-3"><label class="form-label">Ciudad</label><input name="city" class="form-control"></div>
           <div class="mb-3"><label class="form-label">Contraseña</label><input type="password" name="password" class="form-control" required></div>
           <div class="mb-3"><label class="form-label">Confirmar Contraseña</label><input type="password" name="confirmPassword" class="form-control" required></div>
-          <button class="btn btn-success w-100">Register</button>
-          <div class="text-center mt-3"><a href="index.html">Already have an account? Login</a></div>
+          <button class="btn btn-success w-100">Registrar</button>
+          <div class="text-center mt-3"><a href="index.html">¿Ya tienes cuenta?<br>¿Ingresa tu cuenta aquí!</a></div>
         </form>
       </div>
     </div>
