--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login</title>
+  <title>Inicio de sesión</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script type="module" defer src="assets/js/auth.js"></script>
   <script type="module" defer src="assets/js/login.js"></script>
@@ -12,12 +12,12 @@
   <div class="container mt-5">
     <div class="card shadow-sm mx-auto" style="max-width: 400px;">
       <div class="card-body">
-        <h3 class="text-center mb-4">Login</h3>
+        <h3 class="text-center mb-4">CrudZocial</h3>
         <form id="loginForm">
-          <div class="mb-3"><label class="form-label">Email</label><input type="email" name="email" class="form-control" required></div>
-          <div class="mb-3"><label class="form-label">Password</label><input type="password" name="password" class="form-control" required></div>
-          <button class="btn btn-primary w-100">Login</button>
-          <div class="text-center mt-3"><a href="register.html">Don't have an account? Register</a></div>
+          <div class="mb-3"><label class="form-label">Correo electrónico</label><input type="email" name="email" class="form-control" required></div>
+          <div class="mb-3"><label class="form-label">Contraseña</label><input type="password" name="password" class="form-control" required></div>
+          <button class="btn btn-primary w-100">Iniciar sesión</button>
+          <div class="text-center mt-3"><a href="register.html">¿No tienes cuenta?<br>¡Registrate aquí!</a></div>
         </form>
       </div>
     </div>
