--- a/notes.html
+++ b/notes.html
@@ -82,6 +82,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script type="module" src="./assets/js/notes.js"></script>
-    <script src="../assets/js/logout.js"></script>
+    <script type="module" src="../assets/js/logout.js"></script>
+
 </body>
 </html>
