--- a/pages/imgs.html
+++ b/pages/imgs.html
@@ -101,5 +101,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="../assets/js/img.js"></script>
+  <script type="module" src="../assets/js/logout.js"></script>
 </body>
 </html>
