--- a/pages/user_profile.html
+++ b/pages/user_profile.html
@@ -98,6 +98,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
   <script type="module" src="../assets/js/user_profile.js"></script>
-  <script src="../assets/js/logout.js"></script>
+  <script type="module" src="../assets/js/logout.js"></script>
+
 </body>
 </html>
