feat(logs) Funcionamiento completo realizado de logic logs

--- a/pages/user_profile.html
+++ b/pages/user_profile.html
@@ -46,11 +46,11 @@
         <div class="row mb-3">
           <div class="col-md-6">
             <label for="first-name" class="form-label">Nombre</label>
-            <input type="text" name="nombres" class="form-control" id="firstName" required>
+            <input type="text" name="firstName" class="form-control" id="firstName" required>
           </div>
           <div class="col-md-6">
             <label for="last-name" class="form-label">Apellido</label>
-            <input type="text" name="apellidos" class="form-control" id="lastName" required>
+            <input type="text" name="lastName" class="form-control" id="lastName" required>
           </div>
         </div>
 
@@ -61,19 +61,19 @@
           </div>
           <div class="col-md-6">
             <label for="phone" class="form-label">Teléfono</label>
-            <input type="number" name="telefono" class="form-control" id="phone" required>
+            <input type="number" name="phone" class="form-control" id="phone" required>
           </div>
         </div>
 
         <div class="row mb-3">
           <div class="col-md-6">
             <label for="country" class="form-label">País</label>
-            <input type="text" name="pais" class="form-control" id="country" required>
+            <input type="text" name="country" class="form-control" id="country" required>
           </div>
 
           <div class="col-md-6">
             <label for="city" class="form-label">Ciudad</label>
-            <input type="text" name="ciudad" class="form-control" id="city" required>
+            <input type="text" name="city" class="form-control" id="city" required>
           </div>
         </div>
 
