--- a/register.html
+++ b/register.html
@@ -18,8 +18,8 @@
           <div class="mb-3"><label class="form-label">Apellidos</label><input name="lastName" class="form-control" required></div>
           <div class="mb-3"><label class="form-label">Correo electrónico</label><input type="email" name="email" class="form-control" required></div>
           <div class="mb-3"><label class="form-label">Teléfono</label><input type ="number" name="phone" class="form-control"></div>
-          <div class="mb-3"><label class="form-label">País</label><input name="country" class="form-control"></div>
-          <div class="mb-3"><label class="form-label">Ciudad</label><input name="city" class="form-control"></div>
+          <div class="mb-3"><label class="form-label">País</label><input type="text" pattern="[A-Za-z]+" name="country" class="form-control"></div>
+          <div class="mb-3"><label class="form-label">Ciudad</label><input type="text" pattern="[A-Za-z]+" name="city" class="form-control"></div>
           <div class="mb-3"><label class="form-label">Contraseña</label><input type="password" name="password" class="form-control" required></div>
           <div class="mb-3"><label class="form-label">Confirmar Contraseña</label><input type="password" name="confirmPassword" class="form-control" required></div>
           <button class="btn btn-success w-100">Registrar</button>
