feat(html) Correción de rutas

--- a/pages/logs.html
+++ b/pages/logs.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
+                        <a class="nav-link" href="./notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./imgs.html"><i class="fas fa-image"></i> Imágenes</a>
