--- a/pages/menu.html
+++ b/pages/menu.html
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
+                        <a class="nav-link" href="./notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./imgs.html"><i class="fas fa-image"></i> Imágenes</a>
@@ -46,7 +46,7 @@
                 <div class="card-custom d-flex flex-column justify-content-between align-items-center flex-fill">
                     <h5><i class="fas fa-sticky-note"></i> Mis Notas</h5>
                     <p>Accede a todas tus notas guardadas, agrega nuevas y edita las existentes.</p>
-                    <a href="../notes.html" class="btn btn-custom mt-auto">Ir a Notas</a>
+                    <a href="./notes.html" class="btn btn-custom mt-auto">Ir a Notas</a>
                 </div>
             </div>
             <div class="col-md-4 d-flex">
