--- a/pages/notes.html
+++ b/pages/notes.html
@@ -22,13 +22,13 @@
                         <a class="nav-link" href="./notes.html"><i class="fas fa-sticky-note"></i> Notas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/imgs.html"><i class="fas fa-image"></i> Imágenes</a>
+                        <a class="nav-link" href="./imgs.html"><i class="fas fa-image"></i> Imágenes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
+                        <a class="nav-link" href=".logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./pages/user_profile.html"><i class="fas fa-user"></i> Perfil</a>
+                        <a class="nav-link" href="./user_profile.html"><i class="fas fa-user"></i> Perfil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="logoutNav"><i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
@@ -81,7 +81,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-    <script type="module" src="./assets/js/notes.js"></script>
+    <script type="module" src="../assets/js/notes.js"></script>
     <script type="module" src="../assets/js/logout.js"></script>
 
 </body>
