--- a/pages/notes.html
+++ b/pages/notes.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="./imgs.html"><i class="fas fa-image"></i> Imágenes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href=".logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
+                        <a class="nav-link" href="./logs.html"><i class="fas fa-clipboard-list"></i> Logs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./user_profile.html"><i class="fas fa-user"></i> Perfil</a>
